fix overflow

--- a/charity-islands/src/css/main.css
+++ b/charity-islands/src/css/main.css
@@ -186,7 +186,7 @@
 }
 
 .color-nav {
-  background-color: #000000;
+  background-color: #dd0a0a;
 }
 
 /*# sourceMappingURL=main.css.map */
