--- a/charity-islands/src/scss/components/_navbar.scss
+++ b/charity-islands/src/scss/components/_navbar.scss
@@ -1,3 +1,3 @@
-.color-nav{
-  background-color: #000000; 
+.color-nav {
+  background-color: #dd0a0a;
 }
